# lparchive2epub

./: .gitignore  LICENSE  README.adoc  README.md  calculate_checksums.sh  plan.md  pyproject.toml  research.md  temp
.junie/: guidelines.md
lparchive2epub/: lib.py  main.py  style.py
tests/: conftest.py  test_lparchive2epub.py
tests/resources/: Dwarf Fortress - Headshoots.html  Resident Evil 1.html  X-COM_ Terror from the Deep.html  all_b3sum.json
util/: all_archives.py
