[project]
name = "lparchive2epub"
version = "1.4.2"
description = ""
authors = [{ name = "Arwalk", email = "siragentprovocateurarwalk@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beautifulsoup4>=4.12.2,<5",
    "tqdm>=4.66.4,<5",
    "aiohttp>=3.9.5,<4",
    "aiohttp-client-cache[all]>=0.14",
    "ebooklib>=0.20",
]

[project.urls]
Repository = "https://github.com/Arwalk/lparchive2epub"

[project.scripts]
lparchive2epub = "lparchive2epub.main:main"

[dependency-groups]
dev = [
    "pytest>=9,<10",
    "coverage>=7.4.0,<8",
    "pytest-asyncio>=0.26.0",
    "blake3>=1.0.4,<2",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["lparchive2epub"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "."
asyncio_default_fixture_loop_scope = "session"
